-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1054 2011-05-26 19:18:54 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-26	pwessel
	* grdsample_func.c:	Must handle any +-360 offsets between header and -R for geo grids.
	* spotter/grdrotater_func.c:	Incorrectly used last segment min/max and not table min/max
				to determine rotated grid extent. Do not sample outside polygon.
	* psxy[z]_func.c:	For -Sm, if -G not set, copy color from -W since this symbol needs
				both fill and pen to work.

2011-05-25	remko
	* pslegend_func.c:	Label (L) should have default font FONT_LABEL, not FONT_TITLE.
				Default font color was not maintained in output of L or H.

2011-05-25	pwessel
	* grdblend_func.c:	Fixed read error in info file, and the phase check.
				Added blend.sh script to test suite.
				Needed better longitude test to determine overlap.
	* grdinfo_func.c:	Needed to free grid between files to reset header.
				Improved selecting correct lon-range formatting.
	* spotter/grdrotator_func.c:	Ensure output has same grid spacing.

2011-05-24	remko
	* psscale_func.c:	Overrule MAP_FRAME_AXES default; make it WESN.
				Do not double plot the frame line along the annotate axis.
				Let WESN setting on -B work properly with -A.

2011-05-24	pwessel
	* nearneighbor_func.c:	The -N1 selection did not reset the minimum sector setting to 1.
				Improved node-search using common machinery in gmt_support.c
	* grdmask_func.c:	Improved node-search using common machinery in gmt_support.c
	* psmask_func.c:	---"---
	* gmt_support.c:	Determine half-widths/heights for node search used in several modules
	* gmt_map.c:		Give -V3 warning if a radius unit turns geographic mode (-fg) on.
	* spotter/grdspotter_func.c:		Fixed porting errors.

2011-05-22	pwessel
	* *_func.c:		Made sure usage message matches the man pages.

2011-05-21	remko